--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Урок по GIT</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href=""></a>
+            <ul>
+                <li><a href="#">Item</a></li>
+                <li><a href="#">Item</a></li>
+                <li><a href="#">Item</a></li>
+                <li><a href="#">Item</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="test"></div>
 </body>
 </html>
